<resources>
    <string name="app_name">LearnDroid</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="reminders">Reminders</string>
    <string name="feedback">Feedback</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="type_your_reminder_message_here">Type your reminder message here</string>
    <string name="darkmode">DarkMode</string>
    <string name="typeamessage">Type a message!</string>
    <string name="typeadate">Type a date!</string>
    <string name="invalidDate">Invalid Date!</string>
    <string name="message">message</string>
    <string name="confirmation_popup">Confirmation PopUp!</string>
    <string name="Areyousure">Are you sure that you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="lyfecycle">lifecycle</string>
    <string name="lifecycle">lifecycle</string>
    <string name="protectyoureyes">Protect your eyes during night time using the dark mode</string>
    <string name="description_reminders">You can set a reminder to notify you that you still have an unfinished course. Just select the course you want to revisit, the date, and the massage you want to get.</string>
    <string name="set_the_reminder">Set the reminder</string>
    <string name="manage_reminders">Manage Reminders</string>
    <string name="start">Start</string>
    <string name="reset">reset</string>
    <string name="back">back</string>
    <string name="next">next</string>
    <string name="resetprogressof">Are you sure that you want to reset the progress?</string>
    <string name="lesson_1">Lesson 1</string>
    <string name="lesson_2">Lesson 2</string>
    <string name="quiz">Quiz</string>
    <string name="android_progress">Android Progress</string>
    <string name="android_course">Android Course</string>
    <string name="username_preluat">Username preluat</string>
    <string name="type">Type:</string>
    <string name="rate_the_app">Rate the app!</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="java_progress">Java Progress</string>
    <string name="java_course">Java Course</string>
    <string name="lesson">LESSON</string>
    <string name="content">Content</string>
    <string name="_1_10">1 / 10</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="xml_course">XML Course</string>
    <string name="total_progress">Total Progress</string>
    <string name="courses">Courses</string>
    <string name="course">Course:</string>
    <string name="date">Date:</string>
    <string name="message_2">Message:</string>
    <string name="xml_progress">XML Progress</string>
    <string name="delete_confirmation">Delete confirmation</string>
    <string name="dyrwtdtr">Do you really want to delete the reminder?</string>
    <string name="no">No</string>
    <string name="nothing_was_deleted">Nothing was deleted!</string>
    <string name="reminder_deleted">\"Reminder deleted: \"</string>
    <string name="light_mode">Light Mode</string>
    <string name="get_the_username">Get the username from the database!</string>
    <string name="to_be_implemented">To be implemented :)</string>
    <string name="java_lesson_1">Java Lesson 1</string>
    <string name="java_lesson_2">Java Lesson 2</string>
    <string name="java_lesson_quiz">Java Lesson Quiz</string>
    <string name="android_lesson_1">Android Lesson 1</string>
    <string name="android_lesson_2">Android Lesson 2</string>
    <string name="android_lesson_quiz">Android Lesson Quiz</string>
    <string name="xml_lesson_1">XML Lesson 1</string>
    <string name="xml_lesson_2">XML Lesson 2</string>
    <string name="xml_lesson_quiz">XML Lesson Quiz</string>
    <string name="please_enter_data">Please enter all the data correctly!</string>
    <string name="login_successful">Log in successful!</string>
    <string name="edit_the_reminder">EDIT THE REMINDER</string>
    <string name="reminder_edited">Reminder edited!</string>
    <string name="settings">Settings</string>
    <string name="Done">Done.</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_succes">Registered successfully!</string>
    <string name="register_now"><u>Register now!</u></string>
    <string name="statistics">Statistics</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_app_ratings">Show app ratings</string>
    <string name="show_feedback_cetegories">Show feedback categories</string>
    <string name="source"> <a href="https://www.youthcentral.vic.gov.au/study-and-training/help-with-study/how-to-study-better/top-10-study-tips">Click here to learn more about it.</a></string>
    <string name="impact_level">Impact Level:</string>
    <string name="learning_advices">Learning advices</string>
    <string name="final_score">\"Final score: \"</string>
    <string name="choose_an_answer">Choose an answer!</string>
</resources>