<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Reminders"



    >

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/description_reminders"
        android:textAlignment="textStart"
        android:textColor="@color/Theme2colorSecondaryText"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/course"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerCourses"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_2"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/type_your_reminder_message_here"
        />

    <Button
        android:id="@+id/setTheRemindersBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_the_reminder" />

    <Button
        android:id="@+id/ManageRemindersBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_reminders" />

</LinearLayout>