<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedBackActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="89dp"
        android:layout_height="80dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/sym_def_app_icon"
        tools:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="98dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:text="@string/username_preluat"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="319dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Please provide your feedback here"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="50dp"
        android:layout_height="28dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="64dp"
        android:lines="@android:integer/config_longAnimTime"
        android:text="@string/type"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tvType2"
        android:layout_width="114dp"
        android:layout_height="27dp"
        android:layout_marginTop="20dp"
        android:lines="@android:integer/config_longAnimTime"
        android:text="@string/rate_the_app"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="172dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toEndOf="@+id/tvType"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/sendFeedbackBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/send_feedback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <RatingBar
        android:id="@+id/ratingBar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:numStars="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvType2" />

</androidx.constraintlayout.widget.ConstraintLayout>